other-vpol/check-hpa-exists/check-hpa-exists.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: check-hpa-exists
  annotations:
    policies.kyverno.io/title: Ensure HPA for Deployments
    policies.kyverno.io/category: Other
    policies.kyverno.io/severity: medium
    kyverno.io/kubernetes-version: "1.30"
    policies.kyverno.io/minversion: 1.19.1
    policies.kyverno.io/subject: Deployment,ReplicaSet,StatefulSet,DaemonSet
    policies.kyverno.io/description: >-
      This policy ensures that Deployments, ReplicaSets, StatefulSets, and DaemonSets are only allowed
      if they have a corresponding Horizontal Pod Autoscaler (HPA) configured in the same namespace.
      The policy checks for the presence of an HPA that targets the resource and denies the creation or update
      of the resource if no such HPA exists. This policy helps enforce scaling practices
      and ensures that resources are managed efficiently.
spec:
  validationActions:
  - Audit
  variables:
  - name: hpaList
    expression: "resource.List('autoscaling/v1', 'horizontalpodautoscalers', object.metadata.namespace).items.orValue([])"
  matchConstraints:
    resourceRules:
    - resources:
      - deployments
      - replicasets
      - statefulsets
      - daemonsets
      operations:
      - CREATE
      - UPDATE
      apiGroups:
      - apps
      apiVersions:
      - v1
  validations:
  - message: "Resource is not allowed without a corresponding HPA."
    expression: "has(exceptions.allowedValues) && object.metadata.name in exceptions.allowedValues || variables.hpaList.exists(hpa, hpa.spec.scaleTargetRef.name == object.metadata.name)"
